--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^9.89.0",
     "@react-three/fiber": "^8.15.11",
+    "lines-and-columns": "^2.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -28,6 +30,7 @@
     "react-three-fiber": "^6.0.13",
     "styled-components": "^6.1.1",
     "three": "^0.159.0",
+    "three-mesh-bvh": "^0.8.3",
     "three-stdlib": "^2.28.7"
   },
   "devDependencies": {
@@ -48,6 +51,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.5.5"
   }
 }
